# ai_clinic

./: .gitignore  CONTRIBUTING.md  README.md  REFERENCES.md  benchmark.json  engine.py  index.html  leaderboard.json  pyproject.toml  report_full.json  report_long.json  run_checkup.py  show_conversation.py  smoke_test.py
.github/workflows/: pages.yml  test.yml
agent_runtime/: __init__.py  harness.py  scenarios.py
ai_clinic/: __init__.py  cli.py  engine.py  interpreter.py
api/: routes.py
docs/: index.html  leaderboard.json  symptom_methodology_full.md
docs/evaluations/: deepseek-v4-flash.json
evaluations/: README.md  deepseek_v4_audited.json  deepseek_v4_comprehensive.json
logs/: deepseek_v4_final_report.json
models/: base.py
probes/: S-01.json  S-03.json  S-04.json  S-07.json  S-09.json  S-100.json  S-101.json  S-102.json  S-103.json  S-104.json  S-105.json  S-106.json  S-107.json  S-108.json  S-109.json  S-11.json  S-110.json  S-111.json  S-112.json  S-113.json  S-116.json  S-117.json  S-118.json  S-119.json  S-12.json  S-13.json  S-19.json  S-20.json  S-21.json  S-22.json  S-23.json  S-24.json  S-25.json  S-26.json  S-27.json  S-28.json  S-29.json  S-30.json  S-31.json  S-32.json  (+17 more)
prompts/: diagnosis_reviewer.md  doctor_consult.md  doctor_diagnose.md  doctor_system.md  force_diagnosis.md  scenario_reviewer.md
scripts/: check_js.py  clean_leaderboard.py  embed_symptoms.py  fix_urls.py  rebuild_leaderboard.py  save_conversation.py  update_full_result.py
scripts/logs/: deepseek_v4_full_diagnosis.md
static/: index.html
tests/: test_agent_runtime.py  test_api.py  test_engine.py
