[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-clinic"
version = "0.5.0"
description = "LLM Mental Health Diagnostic — 119 behavioral symptoms across 15 dimensions. A/B comparison engine with LLM judge scoring, Wilson CI, and personality profiles."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"

authors = [
    {name = "joe9939"},
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/joe9939/ai_clinic"
Repository = "https://github.com/joe9939/ai_clinic"
Documentation = "https://github.com/joe9939/ai_clinic#readme"

[project.scripts]
ai-clinic = "ai_clinic.cli:main"

[tool.setuptools.packages.find]
include = ["*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
